Done these new changes and fixed the design issues:- 1. Updated the Tax Scorecard fields and updated the texts and tooltip in Tax Risk Analysis page 2. Fixed the gray text color issue on report builder page for comparative table while switching the columns off 3. Fixed border color of tables for Tax scorecard and Tax Risk Analysis in dark modes

--- a/src/assets/css/calculator.css
+++ b/src/assets/css/calculator.css
@@ -17,6 +17,9 @@
 .sidebar-nav .nav-link svg.no-bg rect{
     fill: none;
 }
+.pt-20{
+    padding-top: 20px;
+}
 .strategy-calc-main-section {
     margin-top: 20px;
     padding-inline: 3rem;
@@ -1434,4 +1437,8 @@ table.index-strategy-table tr th {
     border-radius: 12px;
     font-size: 12px;
     box-shadow: 0px 0.25px 3px 0px rgba(0, 0, 0, 0.25);
+}
+.form-heading{
+    color: #147D64;
+    font-weight: 600;
 }
