--- a/src/assets/css/light-blue.css
+++ b/src/assets/css/light-blue.css
@@ -1585,3 +1585,6 @@ background: #1660A4;
 .light-blue .summary-analysis .table td .text-success, .light-blue .summary-analysis .table td.text-success{
   color: #004885 !important;
 }
+.light-blue .form-heading{
+  color: var(--blue-clr);
+}
